--- a/Spectrum.csproj
+++ b/Spectrum.csproj
@@ -210,6 +210,7 @@
     <Compile Include="Framework\Graphics\Animation\Bone.cs" />
     <Compile Include="Framework\Graphics\Animation\Keyframe.cs" />
     <Compile Include="Framework\Graphics\Animation\SkinningData.cs" />
+    <Compile Include="Framework\Graphics\Billboard.cs" />
     <Compile Include="Framework\Graphics\Draw3D.cs" />
     <Compile Include="Framework\Graphics\Effects\SkinnedEffect.cs" />
     <Compile Include="Framework\Graphics\VertexTypes.cs" />
