Support multiple directories in Content Helper refactor ContentManager out slightly more

--- a/Spectrum.csproj
+++ b/Spectrum.csproj
@@ -190,6 +190,7 @@
     <Compile Include="Framework\Content\HeightmapParser.cs" />
     <Compile Include="Framework\Content\ImageAsset.cs" />
     <Compile Include="Framework\Content\ImageAssetParser.cs" />
+    <Compile Include="Framework\Content\MGCParser.cs" />
     <Compile Include="Framework\Content\ModelParsing\G3DJReader.cs" />
     <Compile Include="Framework\Content\ModelParsing\OBJReader.cs" />
     <Compile Include="Framework\Content\InitDataParser.cs" />
