--- a/Spectrum.csproj
+++ b/Spectrum.csproj
@@ -74,7 +74,7 @@
   <PropertyGroup />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Steam-Debug|x86'">
     <OutputPath>bin\x86\Steam-Debug\</OutputPath>
-    <DefineConstants>TRACE;DEBUG</DefineConstants>
+    <DefineConstants>TRACE;DEBUG;STEAM</DefineConstants>
     <PlatformTarget>x86</PlatformTarget>
     <DebugType>full</DebugType>
     <DebugSymbols>true</DebugSymbols>
