--- a/Spectrum.csproj
+++ b/Spectrum.csproj
@@ -233,7 +233,7 @@
     <Compile Include="Framework\Graphics\Camera.cs" />
     <Compile Include="Framework\Input\Axis.cs" />
     <Compile Include="Framework\Input\Gamepad.cs" />
-    <Compile Include="Framework\Input\Button.cs" />
+    <Compile Include="Framework\Input\KeyBinding.cs" />
     <Compile Include="Framework\Input\InputLayout.cs" />
     <Compile Include="Framework\Input\PlayerInformation.cs" />
     <Compile Include="Framework\Input\RawMouse.cs" />
