Add better line drawing support, camera yaw pitch roll improvements to be based off of rotation quaternion

--- a/Spectrum.csproj
+++ b/Spectrum.csproj
@@ -96,6 +96,20 @@
     <PlatformTarget>AnyCPU</PlatformTarget>
     <OutputPath>bin\Steam-Debug\</OutputPath>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Steam-Release|x86'">
+    <DebugSymbols>true</DebugSymbols>
+    <OutputPath>bin\x86\Steam-Release\</OutputPath>
+    <DefineConstants>TRACE;DEBUG;STEAM;STEAMWORKS_WIN</DefineConstants>
+    <DebugType>full</DebugType>
+    <PlatformTarget>x86</PlatformTarget>
+    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Steam-Release|AnyCPU'">
+    <OutputPath>bin\Steam-Release\</OutputPath>
+    <PlatformTarget>AnyCPU</PlatformTarget>
+    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+    <Optimize>true</Optimize>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="BouncyCastle.Crypto">
       <HintPath>Dependencies\BouncyCastle.Crypto.dll</HintPath>
