--- a/Spectrum.csproj
+++ b/Spectrum.csproj
@@ -252,6 +252,10 @@
     <Compile Include="Framework\Input\PlayerInformation.cs" />
     <Compile Include="Framework\Input\RawMouse.cs" />
     <Compile Include="Framework\Input\SpectrumMouse.cs" />
+    <Compile Include="Framework\JSON\JMatrixConverter.cs" />
+    <Compile Include="Framework\JSON\JVectorConverter.cs" />
+    <Compile Include="Framework\JSON\JShapeParser.cs" />
+    <Compile Include="Framework\JSON\SpectrumJsonConverter.cs" />
     <Compile Include="Framework\Screens\RootElement.cs" />
     <Compile Include="Framework\Screens\SceneScreen.cs" />
     <Compile Include="Framework\VR\VRInput.cs" />
@@ -433,6 +437,7 @@
     </Content>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>
