--- a/Test/SpectrumTest.csproj
+++ b/Test/SpectrumTest.csproj
@@ -67,6 +67,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="InitDataTests.cs" />
+    <Compile Include="JSONTests.cs" />
     <Compile Include="UnitTest1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
