Add a TextInput, SpecModel serialization by name

--- a/Spectrum.csproj
+++ b/Spectrum.csproj
@@ -257,6 +257,8 @@
     <Compile Include="Framework\JSON\JVectorConverter.cs" />
     <Compile Include="Framework\JSON\JShapeConverter.cs" />
     <Compile Include="Framework\JSON\SimpleConverter.cs" />
+    <Compile Include="Framework\Network\Surrogates\ModelSurrogate.cs" />
+    <Compile Include="Framework\Screens\InputElements\TextInput.cs" />
     <Compile Include="Framework\Screens\RootElement.cs" />
     <Compile Include="Framework\Screens\SceneScreen.cs" />
     <Compile Include="Framework\VR\VRInput.cs" />
