Add steam symbol to Release build

--- a/Spectrum.csproj
+++ b/Spectrum.csproj
@@ -109,6 +109,7 @@
     <PlatformTarget>AnyCPU</PlatformTarget>
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
     <Optimize>true</Optimize>
+    <DefineConstants>STEAM</DefineConstants>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="BouncyCastle.Crypto">
