--- a/Spectrum.csproj
+++ b/Spectrum.csproj
@@ -244,6 +244,8 @@
     <Compile Include="Framework\Graphics\Effects\SkinnedEffect.cs" />
     <Compile Include="Framework\Graphics\RenderTask.cs" />
     <Compile Include="Framework\Graphics\VertexTypes.cs" />
+    <Compile Include="Framework\JSON\JPointConverter.cs" />
+    <Compile Include="Framework\Utility\Point3.cs" />
     <Compile Include="Framework\IDebug.cs" />
     <Compile Include="Framework\Graphics\Camera.cs" />
     <Compile Include="Framework\Input\Axis.cs" />
@@ -266,7 +268,7 @@
     <Compile Include="Framework\LSystem\LNode.cs" />
     <Compile Include="Framework\LSystem\LTree.cs" />
     <Compile Include="Framework\ExtensionMethods.cs" />
-    <Compile Include="Framework\Helpers\MatrixHelper.cs" />
+    <Compile Include="Framework\Utility\MatrixHelper.cs" />
     <Compile Include="Framework\Network\Handshake.cs" />
     <Compile Include="Framework\Network\NetID.cs" />
     <Compile Include="Framework\Network\NetMessage.cs" />
