--- a/Spectrum.csproj
+++ b/Spectrum.csproj
@@ -245,6 +245,7 @@
     <Compile Include="Framework\Graphics\RenderTask.cs" />
     <Compile Include="Framework\Graphics\VertexTypes.cs" />
     <Compile Include="Framework\JSON\JPointConverter.cs" />
+    <Compile Include="Framework\Screens\DialogScreen.cs" />
     <Compile Include="Framework\Utility\Point3.cs" />
     <Compile Include="Framework\IDebug.cs" />
     <Compile Include="Framework\Graphics\Camera.cs" />
@@ -312,10 +313,8 @@
     <Compile Include="Framework\Physics\ResourcePool.cs" />
     <Compile Include="Framework\Physics\ThreadManager.cs" />
     <Compile Include="Framework\Physics\PhysicsEngine.cs" />
-    <Compile Include="Framework\Screens\BackgroundScreen.cs" />
     <Compile Include="Framework\Screens\Element.cs" />
     <Compile Include="Framework\Screens\ElementField.cs" />
-    <Compile Include="Framework\Screens\GameScreen.cs" />
     <Compile Include="Framework\Screens\GridLayout.cs" />
     <Compile Include="Framework\Screens\InGameScreen.cs" />
     <Compile Include="Framework\Input\InputState.cs" />
@@ -331,7 +330,6 @@
     <Compile Include="Framework\Screens\LayoutManager.cs" />
     <Compile Include="Framework\Screens\LinearLayout.cs" />
     <Compile Include="Framework\Screens\MenuScreen.cs" />
-    <Compile Include="Framework\Screens\MessageBoxScreen.cs" />
     <Compile Include="Framework\Screens\RectOffset.cs" />
     <Compile Include="Framework\Content\ContentHelper.cs" />
     <Compile Include="Framework\Graphics\Animation\AnimationPlayer.cs" />
