--- a/Spectrum.csproj
+++ b/Spectrum.csproj
@@ -249,6 +249,7 @@
     <Compile Include="Framework\Graphics\Effects\SkinnedEffect.cs" />
     <Compile Include="Framework\Graphics\RenderTask.cs" />
     <Compile Include="Framework\Graphics\VertexTypes.cs" />
+    <Compile Include="Framework\Screens\ElementSelector.cs" />
     <Compile Include="Framework\Transform.cs" />
     <Compile Include="Framework\JSON\JPointConverter.cs" />
     <Compile Include="Framework\Screens\DialogScreen.cs" />
