--- a/Spectrum.csproj
+++ b/Spectrum.csproj
@@ -249,6 +249,9 @@
     <Compile Include="Framework\Graphics\Effects\SkinnedEffect.cs" />
     <Compile Include="Framework\Graphics\RenderTask.cs" />
     <Compile Include="Framework\Graphics\VertexTypes.cs" />
+    <Compile Include="Framework\Input\VR\VRBinding.cs" />
+    <Compile Include="Framework\Input\VR\VRController.cs" />
+    <Compile Include="Framework\Input\VR\VRHmd.cs" />
     <Compile Include="Framework\Screens\ElementSelector.cs" />
     <Compile Include="Framework\Screens\ElementStyle.cs" />
     <Compile Include="Framework\Transform.cs" />
@@ -274,7 +277,6 @@
     <Compile Include="Framework\Screens\InputElements\TextInput.cs" />
     <Compile Include="Framework\Screens\RootElement.cs" />
     <Compile Include="Framework\Screens\SceneScreen.cs" />
-    <Compile Include="Framework\VR\VRInput.cs" />
     <Compile Include="Framework\LSystem\LNode.cs" />
     <Compile Include="Framework\LSystem\LTree.cs" />
     <Compile Include="Framework\ExtensionMethods.cs" />
