--- a/Spectrum.csproj
+++ b/Spectrum.csproj
@@ -238,6 +238,7 @@
     <Compile Include="Framework\Content\ScreenParser.cs" />
     <Compile Include="Framework\Debug\DebugPrinter.cs" />
     <Compile Include="Framework\Debug\DebugTiming.cs" />
+    <Compile Include="Framework\Entities\Component.cs" />
     <Compile Include="Framework\Entities\InitData.cs" />
     <Compile Include="Framework\Entities\Interpolator.cs" />
     <Compile Include="Framework\Entities\ReplicateAttribute.cs" />
