--- a/Spectrum.csproj
+++ b/Spectrum.csproj
@@ -1,13 +1,35 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>net46</TargetFramework>
+    <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
+    <Platforms>x86</Platforms>
+    <Configurations>Debug;Release;Steam-Debug;Steam-Release</Configurations>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x86'">
+    <DefineConstants>DEBUG;TRACE;</DefineConstants>
+    <OutputPath>bin\Debug</OutputPath>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x86'">
+    <DefineConstants></DefineConstants>
+    <OutputPath>bin\Release</OutputPath>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Steam-Debug|x86'">
+    <DefineConstants>DEBUG;TRACE;STEAM;STEAMWORKS_WIN</DefineConstants>
+    <OutputPath>bin\SteamDebug</OutputPath>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Steam-Release|x86'">
+    <DefineConstants>STEAM;STEAMWORKS_WIN</DefineConstants>
+    <OutputPath>bin\SteamRelease</OutputPath>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Remove="Dependencies\**" />
     <Compile Remove="Test\**" />
+    <EmbeddedResource Remove="Dependencies\**" />
     <EmbeddedResource Remove="Test\**" />
+    <None Remove="Dependencies\**" />
     <None Remove="Test\**" />
-  </ItemGroup>
-  <ItemGroup>
+    <None Remove="**/.git" />
+    <None Remove="**/.gitignore" />
     <None Remove="Spectrum.v11.suo" />
     <None Remove="SpectrumTest.v12.suo" />
   </ItemGroup>
@@ -86,10 +108,47 @@
     </Reference>
     <Reference Include="System.Windows.Forms" />
   </ItemGroup>
+  
   <ItemGroup>
-    <Folder Include="Properties\" />
+    <MGFXCompile Include="Content\HLSL\SkinnedEffect.fx">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </MGFXCompile>
+    <Content Include="Content\Textures\missing.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Dependencies\Steamworks\CSteamworks.dll">
+      <Link>CSteamworks.dll</Link>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Dependencies\Steamworks\steam_api.dll">
+      <Link>steam_api.dll</Link>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <MGFXCompile Include="Content\HLSL\PostProcessEffect.fx">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </MGFXCompile>
+    <MGFXCompile Include="Content\HLSL\SpectrumEffect.fx" />
+    <MGFXCompile Include="Content\HLSL\TerrainEffect.fx" />
+    <MGFXCompile Include="Content\HLSL\WaterEffect.fx" />
+    <Content Include="Content\Textures\blank.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="openvr_api.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
+
+  <PropertyGroup>
+    <CustomBuildAfterTargets>ClCompile</CustomBuildAfterTargets>
+    <CustomBuildBeforeTargets>Link</CustomBuildBeforeTargets>
+  </PropertyGroup>
+
+  <PropertyGroup>
+    <CustomBuildAfterTargets>Compile</CustomBuildAfterTargets>
+    <CustomBuildBeforeTargets>Link</CustomBuildBeforeTargets>
+  </PropertyGroup>
+  <Import Project="mgfx.targets.xml" />
 </Project>
