--- a/Test/SpectrumTest.csproj
+++ b/Test/SpectrumTest.csproj
@@ -1,6 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>net46</TargetFramework>
+    <Platforms>AnyCPU;x64;x86</Platforms>
   </PropertyGroup>
   <ItemGroup>
     <None Remove="SpectrumTest.v12.suo" />
