--- a/Spectrum.csproj
+++ b/Spectrum.csproj
@@ -27,10 +27,13 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Remove="Dependencies\**" />
+    <Compile Remove="Replicate\**" />
     <Compile Remove="Test\**" />
     <EmbeddedResource Remove="Dependencies\**" />
+    <EmbeddedResource Remove="Replicate\**" />
     <EmbeddedResource Remove="Test\**" />
     <None Remove="Dependencies\**" />
+    <None Remove="Replicate\**" />
     <None Remove="Test\**" />
     <None Remove="**/.git" />
     <None Remove="**/.gitignore" />
@@ -135,6 +138,9 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="Replicate\Replicate\Replicate.csproj" />
   </ItemGroup>
 
   <PropertyGroup>
