--- a/Test/SpectrumTest.csproj
+++ b/Test/SpectrumTest.csproj
@@ -2,6 +2,7 @@
   <PropertyGroup>
     <TargetFramework>net46</TargetFramework>
     <Platforms>x86</Platforms>
+    <LangVersion>8.0</LangVersion>
   </PropertyGroup>
   <ItemGroup>
     <None Remove="SpectrumTest.v12.suo" />
