--- a/Spectrum.csproj
+++ b/Spectrum.csproj
@@ -143,7 +143,9 @@
     <PackageReference Include="IronPython" Version="2.7.9" />
     <PackageReference Include="Microsoft.CSharp" Version="4.6.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
-    <PackageReference Include="Replicate" Version="0.1.6" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="Replicate\Replicate\Replicate.csproj" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349b6-6b84-4df5-91f0-309beebad82d}" />
